# lab-06-airflow-pipeline

./: .gitignore  README.md  docker-compose.yaml
scripts/: pyproject.toml
