[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Mjumbe Poe <mjumbewu@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
requests = "^2.26.0"
pandas = "^1.3.4"
google-cloud-storage = "^1.42.3"
SQLAlchemy = "^1.4.26"
sqlalchemy-bigquery = "^1.2.0"
python-dotenv = "^0.19.1"
google-cloud-bigquery-storage = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
